added null check to PlayerServiceImpl